--- a/ENA/web/css.css
+++ b/ENA/web/css.css
@@ -7,7 +7,13 @@ and open the template in the editor.
     Created on : 12-06-2018, 23:01:33
     Author     : lucas
 */
-
+.menu {
+    border-style: solid;
+    width: 50%;
+    padding-left:  5px;
+    padding-right:  5px;
+    padding-bottom:  20px;
+}
 
 h1 {
     border-bottom: solid;
