--- a/ENA/web/css.css
+++ b/ENA/web/css.css
@@ -9,14 +9,30 @@ and open the template in the editor.
 */
 .m {
     border-style: solid;
-    width: 50%;
+    width: 75%;
     padding-left:  5px;
     padding-right:  5px;
     padding-bottom:  20px;
+}
+#m2{
+    width: 99%;
 }
 
 h1 {
     border-bottom: solid;
     margin-top: 0px;
     margin-bottom: 0px;
+}
+table{
+    margin: 1%;
+    border-collapse: collapse;
+    width: 50%;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+td {
+    font-size: 10px;
 }
